<resources>
    <string name="app_name">SP Mobile</string>
    <string name="property">Property</string>
    <string name="bed_owned">Number of bed owned</string>
    <string name="table_owned">Number of table owned</string>
    <string name="chair_owned">Number of chair owned</string>
    <string name="sofa_owned">Number of sofa owned</string>
    <string name="mosquito_nets_owned">Number of mosquito nets owned</string>
    <string name="cultivable_land_owned">Number of cultivable land owned</string>
    <string name="meals_eaten_by_adults_18_plus_yesterday"><b>I\.1\.</b> How many meals did the adults \n\u002818 years and older\u0029 in the household eat yesterday?</string>
    <string name="meals_eaten_by_children_6_to_17_yesterday"><b>I\.2\.</b> How many meals did the children \n\u00286 to 17 years old\u0029 in the household eat yesterday? </string>
    <string name="meals_eaten_by_children_2_to_5_yesterday"><b>I\.3\.</b> How many meals did the children \n\u00282 to 5 years old\u0029 in the household eat yesterday?</string>
    <string name="how_many_days_did_members_eat_the_ff"><b>I\.4\.</b> How many days in the past 7 days did members of your household eat the following foods, prepared and/or consumed at home, and from what source did they come from\?</string>
    <string name="days_in_week_consumed_staple_foods">I\.4\.1 Staple foods including: \n\u0028cereals\, roots\, and tubers\: sorghum\, millet\, maize\, wheat\, rice\, pasta spaghetti\u0029 and bread\/cake\, donuts\, potato\, cassava and other tubers\; plantains\u0029</string>
    <string name="days_in_week_consumed_legumes_or_nuts">2. Legumes\/nuts \u0028beans, peanuts, lentils, almonds, and/or other nuts, mbika, soy, etc.\u0029</string>
    <string name="days_in_week_consumed_dairy_products">3. Milk and other dairy products: Fresh milk, yogurt, cheese, other dairy products EXCEPT margarine/butter or small amounts of milk for tea/coffee \u0028Powdered milk: only if glasses of powdered milk are consumed\u0029</string>
    <string name="days_in_week_consumed_meat">4. Meat  \u0028beef, pigs, goats, etc.\u0029, Crustaceans (fish  and seafood), eggs, chickens, canned tuna and sardines, caterpillars</string>
    <string name="days_in_week_consumed_vegetables">5.  Vegetables: \u0028all leaves and fruit vegetables\u0029, mushrooms</string>
    <string name="days_in_week_consumed_fruits">6. Fruits: banana, apple, lemon, mandarin, mango, papaya etc.</string>
    <string name="days_in_week_consumed_cooking_oils">7. Cooking oils \u0028palm oils and other types of cooking oils\u0029</string>
    <string name="days_in_week_consumed_sugar_or_sweet_products">8. Sugar or  sweet products\: honey, jam, sugary drinks, sweets, cookies, pastries, cakes and other sweet products</string>
    <string name="household_member_with_benefit_from_social_assistance_program"><b>I.5</b> Is there at least one member of your household who is currently receiving a social assistance programme \u0028government, NGO,etc.\u0029? *</string>
    <string name="days_spent_reduce_amount_consumed_coping_strategy">I.8.1 Reduce the quantities consumed each time</string>
    <string name="days_spent_reduce_meals_consumed_coping_strategy">I.8.2 Reduce the number of meals per day</string>
    <string name="days_spent_reduce_meals_adult_forfeit_meal_for_child_coping_strategy">I.8.4 Reduce the amounts consumed by adults for the benefit of children?</string>
    <string name="days_spent_begging_coping_strategy">I.8.7. Begging</string>
    <string name="days_spent_consume_wild_food_coping_strategy">I.8.8. Consumption of wild foods</string>
    <string name="other_household_activities_in_past_12_months">I.9.6. Other </string>
    <string name="days_spent_borrow_food_or_rely_on_family_help_coping_strategy">I.8.5. Borrow food, or rely on the help of family or friends?</string>
    <string name="days_spent_days_without_eating_coping_strategy">I.8.6. Going days without eating</string>
    <string name="days_spent_eat_less_expensively_coping_strategy">I.8.3. Eating cheaper food than usual</string>
    <string name="button_register">Register</string>
    <string name="number_of_goat_owned">Number of goat owned</string>
    <string name="number_of_sheep_owned">Number of sheep owned</string>
    <string name="number_of_cow_owned">Number of cow owned</string>
    <string name="number_of_rabbit_owned">Number of rabbit owned</string>
    <string name="number_of_pigs_owned">Number of pigs owned</string>
    <string name="number_of_poultry_owned">Number of poultry owned</string>
    <string name="number_of_television_owned">Number of television owned</string>
    <string name="number_of_air_conditionor_owned">Number of air conditionor owned</string>
    <string name="number_of_fan_owned">Number of fan owned</string>
    <string name="number_of_fridge_owned">Number of fridge owned</string>
    <string name="number_of_mattress_owned">Number of mattress owned</string>
    <string name="number_of_rickshaw_owned">Number of rickshaw owned</string>
    <string name="number_of_wheelbarrow_owned">Number of wheelbarrow owned</string>
    <string name="number_of_dvd_driver_owned">Number of DVD driver owned</string>
    <string name="number_of_computer_owned">Number of computer owned</string>
    <string name="number_of_stove_or_oven_owned">Number of stove or oven owned</string>
    <string name="number_of_oil_stove_owned">Number of oil stove owned</string>
    <string name="number_of_solar_plate_owned">Number of solar plate owned</string>
    <string name="number_of_bicycle_owned">Bicycle</string>
    <string name="number_of_cart_owned">Number of cart owned</string>
    <string name="number_of_plow_owned">Number of plow owned</string>
    <string name="number_of_motobike_owned">Number of motobike owned</string>
    <string name="number_of_radio_owned">Number of radio owned</string>
    <string name="number_of_canal_tnt_tv_cable_owned">Number of Canal TNT TV Cable owned</string>
    <string name="number_of_sewing_machines_owned">Number of sewing machines owned</string>
    <string name="number_of_electric_iron_owned">Number of electric iron owned</string>
    <string name="number_of_charcoal_iron_owned">Number of charcoal iron owned</string>
    <string name="number_of_cars_owned">Number of cars owned</string>
    <string name="number_of_guinea_pigs_owned">Number of guinea pigs owned</string>
    <string name="respondent">Respondent</string>
    <string name="respondent_firstname"><b>C.6.1</b> Respondent Firstname *</string>
    <string name="respondent_middlename"><b>C.6.2</b> Respondent Middlename</string>
    <string name="respondent_lastname"><b>C.6.2</b> Respondent Lastname *</string>
    <string name="respondent_dob">Respondent DOB</string>
    <string name="respondent_family_bond_to_head">Respondent family bond to head</string>
    <string name="respondent_voter_id"><b>C.8</b> Respondent Voter ID</string>
    <string name="respondent_phone_number"><b>C.9</b> Respondent Phone number</string>
    <string name="household">Household</string>
    <string name="household_status">Household status</string>
    <string name="migration_status">Migration status</string>
    <string name="other_migration_status"><b>C.10.1</b> Other migration status</string>
    <string name="duration_displaced_returned_repatriated_refugee"><b>C.11</b> Duration displaced returned repatriated refugee</string>
    <string name="number_of_months_displaced_returned_repatriated_refugee">Number of months displaced returned repatriated refugee</string>
    <string name="unit_of_migration_duration">Unit of migration duration</string>
    <string name="bank_account_or_bankcard_available"><b>G.4</b> Do you have an account or credit card?</string>
    <string name="is_income_regular"><b>G.3</b> Is the income regular? </string>
    <string name="access_to_cultivable_land"><b>H.1</b> Does a member of your household have access to arable land even if it does not belong to them? *</string>
    <string name="sale_of_production_assets">I.9.2 Sale of production assets</string>
    <string name="use_of_child_labor">I.9.3 Use of child labour</string>
    <string name="use_of_early_marriage">I.9.4 Use of early marriage</string>
    <string name="affected_by_epidemic">Affected by epidemic</string>
    <string name="owner_of_cultivable_land">Owner of cultivable land</string>
    <string name="name_of_social_assistance_program"><b>I\.6\</b> If so, which program?</string>
    <string name="minimum_monthly_income_necessary_live_without_difficulties">Minimum monthly income necessary live without difficulties</string>
    <string name="household_monthly_income">Household monthly income</string>
    <string name="days_spent_other_coping_strategy">I.8.9 Other coping strategy</string>
    <string name="give_up_health_care">I.9.5 Abandoning health care</string>
    <string name="take_children_out_of_school">I.9.1 Removing children from school</string>
    <string name="affected_by_other_shock">4 Other</string>
    <string name="affected_by_climate_shock">3 Climatic \u0028flood,drought etc\u0029 </string>
    <string name="edit_user_details">Edit user details</string>
    <string name="john_doe" translatable="false">john doe</string>
    <string name="user_email_com" translatable="false">user@email.com</string>
    <string name="phone_number">Phone number</string>
    <string name="team_leader">Team leader</string>
    <string name="supervisor">Supervisor</string>
    <string name="update">update</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="consent">Do you agree to provide your information to fill out this form?</string>
    <string name="consent_agreement">The Government of the Republic through the Ministry of  Social Affairs (MINAS) has embarked on a series of reforms of the social protection sector for effective piloting.
        The purpose of this reform is to broaden the database of poor and vulnerable persons in MINAS to include those of actors implementing social assistance programmes,
        including agencies of the United Nations system and national and international NGOs, and to allow the control of personal data, according to a protocol to be agreed.
        Ultimately, the process will lead to the construction of a Social Register serving as a gateway for the registration and eligibility of vulnerable people and households for several programmes in social assistance.
        It is for this purpose that your consent is requested to provide us with the information contained in this questionnaire in order to enable the Government to improve its social policies.
        Thank you for giving us a part from your time and we guarantee the confidential nature of the data collected as a result of this survey, in accordance with Decree No. 10/05 of 11 February on the National Statistical System."
</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="households">Households</string>
    <string name="dashboard">Dashboard</string>
    <string name="non_consenting">Non-consenting</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="data_consent">Data consent</string>
    <string name="preferences" translatable="false">Preferences</string>
    <string name="language">Language</string>
    <string name="advanced">Advanced</string>
    <string name="help">Help</string>
    <string name="report_technical_issues">Report technical issues</string>
    <string name="host">Host</string>
    <string name="configure_host_server_urls">Configure host server urls</string>
    <string name="choose_language">Choose language</string>
    <string name="add_member">add member</string>
    <string name="d_composition_of_household">D. COMPOSITION OF HOUSEHOLD</string>
</resources>