<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/heading_form_sub"
        android:text="@string/property" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">


            <io.bewsys.spmobile.ui.views.EditTextQuestion
                style="@style/question_style"
                android:inputType="number"
                android:text="@string/number_of_goat_owned" />

            <io.bewsys.spmobile.ui.views.EditTextQuestion
                style="@style/question_style"
                android:inputType="number"
                android:text="@string/number_of_sheep_owned" />

            <io.bewsys.spmobile.ui.views.EditTextQuestion
                style="@style/question_style"
                android:inputType="number"
                android:text="@string/number_of_cow_owned" />

            <io.bewsys.spmobile.ui.views.EditTextQuestion
                style="@style/question_style"
                android:inputType="number"
                android:text="@string/number_of_rabbit_owned" />

            <io.bewsys.spmobile.ui.views.EditTextQuestion
                style="@style/question_style"
                android:inputType="number"
                android:text="@string/number_of_pigs_owned" />


            <io.bewsys.spmobile.ui.views.EditTextQuestion
                style="@style/question_style"
                android:inputType="number"
                android:text="@string/number_of_poultry_owned" />

            <io.bewsys.spmobile.ui.views.EditTextQuestion
                style="@style/question_style"
                android:inputType="number"
                android:text="@string/number_of_guinea_pigs_owned" />

            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_cars_owned" />

            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_motobike_owned" />

            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_bicycle_owned" />

            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_cart_owned" />


            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_plow_owned" />

            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_wheelbarrow_owned" />

            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_rickshaw_owned" />


            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_mattress_owned" />

            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_fridge_owned" />

            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_fan_owned" />

            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_air_conditionor_owned" />


            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_television_owned" />

            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_radio_owned" />

            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_canal_tnt_tv_cable_owned" />

            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_dvd_driver_owned" />

            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_computer_owned" />

            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_stove_or_oven_owned" />

            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_oil_stove_owned" />

            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_solar_plate_owned" />

            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_sewing_machines_owned" />

            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_electric_iron_owned" />

            <io.bewsys.spmobile.ui.views.QuantityQuestion
                style="@style/question_style"
                android:entries="@array/short_number_list"
                android:text="@string/number_of_charcoal_iron_owned" />

        </LinearLayout>

    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>