<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.settings.SettingsFragment">
    <PreferenceCategory
        app:key="preferences_category"
        app:title="@string/preferences">
        <ListPreference
            app:defaultValue="1"
            app:dialogTitle="@string/choose_language"
            app:entries="@array/language"
            app:entryValues="@array/locales"
            app:key="language"
            app:useSimpleSummaryProvider="true"
            app:title="@string/language" />

    </PreferenceCategory>
    <PreferenceCategory
        app:key="advanced_category"
        app:title="@string/advanced">
        <Preference
            app:fragment="io.bewsys.spmobile.ui.settings.HostSettingsFragment"
            app:title="@string/host"
            app:summary="@string/configure_host_server_urls"/>

        <Preference
            app:key="help"
            app:summary="@string/report_technical_issues"
            app:title="@string/help" />

    </PreferenceCategory>


</androidx.preference.PreferenceScreen>