<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/menu_dashboard_24"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_household"
            android:icon="@drawable/menu_household_24"
            android:title="@string/households" />

        <item
            android:id="@+id/nav_non_consenting"
            android:icon="@drawable/menu_cancel_24"
            android:title="@string/non_consenting" />
    </group>


        <item
            android:title="@string/account">
            <menu>
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/menu_profile_24"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/menu_settings_24"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/menu_logout_24"
                    android:title="@string/logout" />

            </menu>
        </item>


</menu>