<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.households.forms.developmentalform.FormStepOneFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Widget.App.Heading.Sub"
                android:text="@string/data_consent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:justificationMode="inter_word"
                android:text="@string/consent_agreement"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <!--            consent -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/consent"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <RadioGroup
                android:id="@+id/rg_consent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_yes"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/yes" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_no"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/no" />
            </RadioGroup>
            <!--             -->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="48dp"
                android:gravity="end"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_next"
                    style="@style/Widget.App.Button"
                    app:icon="@drawable/ic_arrow_forward_ios_24"
                    app:iconTint="@color/colorPrimary"
                    android:text="@string/next" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

