<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.households.forms.developmentalform.SectionDCompositionOfHousholdFragment">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_members"
        style="@style/Widget.App.Button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_member"
        app:icon="@drawable/menu_add_24"
        app:iconTint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/Widget.App.Heading.Sub"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/d_composition_of_household"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_members"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_members"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:elevation="4dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_previous"
            style="@style/Widget.App.Button"
            android:layout_alignParentStart="true"
            android:text="@string/previous"
            app:icon="@drawable/ic_arrow_back_ios_24"
            app:iconTint="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/Widget.App.Button"
            android:layout_alignParentEnd="true"
            android:text="@string/next"
            app:icon="@drawable/ic_arrow_forward_ios_24"
            app:iconGravity="end"
            app:iconTint="@color/colorPrimary" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>